--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/node": ">=10",
     "@types/promise.allsettled": "^1.0.3",
     "axios": "^0.19.0",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "please-upgrade-node": "^3.2.0",
     "promise.allsettled": "^1.0.2",
@@ -58,6 +59,7 @@
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
+    "@types/cors": "^2.8.9",
     "@types/mocha": "^5.2.6",
     "@types/sinon": "^7.0.11",
     "@typescript-eslint/eslint-plugin": "^3.6.0",
